# 3d-game

./: CMakeLists.txt  README.md
3d-game/: main.cpp
3d-game.xcodeproj/: project.pbxproj
3d-game.xcodeproj/xcuserdata/fedorshevtsev.xcuserdatad/xcschemes/: xcschememanagement.plist
3d-game/Cpp files/: Game_start.cpp  Init_game.cpp  Math.cpp  Move_player.cpp  main.cpp
3d-game/Headers/: Game_start.hpp  Global_functions.hpp  Init_game.hpp  Math.hpp  Move_player.hpp
3d-game/src/: Game_start.cpp  Init_game.cpp  Move_player.cpp  main.cpp
